Fixed all decks and single deck styling overlap

--- a/src/pages/AllDecks/singledeck.css
+++ b/src/pages/AllDecks/singledeck.css
@@ -4,6 +4,8 @@
   padding: 30px;
   height: 93vh;
   box-sizing: border-box;
+  background-color: #F9FAFB;
+  box-sizing: border-box;
 }
 
 .decks-container {
